# Terrain-Generation

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Terrain-Generation.sublime-project  biomeTypes.json  biomes.json  config.txt  config.yaml
assets/: lp-90S.mtl
data/: README.md
src/: Noise.hpp  PerlinNoise.cpp  config.cpp  config.hpp  fbm.cpp  main.cpp  main_mio.cpp  mesher.cpp  mesher.hpp  terrain_generation.hpp
src/FbmGenerator/: fractionalBrownianMotion.cpp  fractionalBrownianMotion.hpp
src/Mesher/: Cubemarching.hpp  Mesher.cpp  Mesher.hpp
src/Noise/: PerlinGenerator.cpp  PerlinGenerator.hpp
src/NoiseGenerator/: NoiseGenerator.cpp  NoiseGenerator.hpp
src/Noises/: CellularNoise.cpp  FBMNoise.cpp  Noise.hpp  OpenSimplexNoise.cpp  PerlinNoise.cpp  SimplexNoise.cpp
src/OpenSimplexGenerator/: OpenSimplexGenerator.cpp  OpenSimplexGenerator.hpp
src/PerlinGenerator/: PerlinGenerator.cpp  PerlinGenerator.hpp
src/SimplexGenerator/: SimplexGenerator.cpp  SimplexGenerator.hpp
src/Terrain/: Biome.cpp  Biome.hpp  Terrain.cpp  Terrain.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp
src/Utility/: Config.cpp  Config.hpp  File_writer_wavefront_texture.h  Generic_facegraph_printer_obj.h  Logger.cpp  Logger.hpp  OBJ.h  Texture_facegraph_printer_obj.h  config.cpp  config.hpp
src/Utility/ImageWriter/: ImageWriter.cpp
src/mesher/: mesher.cpp  mesher.hpp
test/: plotPoints.ipynb  test.cpp
test/data/: README.md
